Bug 96595 - Keyboard not grabbed correctly after 2cb74f4ac1fc5c3601cbc780f7eefa6e867ba4d2
Summary: Keyboard not grabbed correctly after 2cb74f4ac1fc5c3601cbc780f7eefa6e867ba4d2
Status: RESOLVED FIXED
Alias: None
Product: Spice
Classification: Unclassified
Component: spice-gtk (show other bugs)
Version: unspecified
Hardware: Other Windows (All)
: medium normal
Assignee: Spice Bug List
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-06-20 11:54 UTC by Frediano Ziglio
Modified: 2016-06-20 15:35 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments

Description Frediano Ziglio 2016-06-20 11:54:57 UTC
This commit replaces GtkDrawingArea with a GtkStack to be able to have different widget to render (like GL one).
However this causes the SpiceDisplay widget to receive a leave_event when user click the window causing the keyboard to be ungrabbed. You can see this behavior setting SPICE_DEBUG environment and clicking on the guest.
On Windows this cause the Alt-Tab combination to be handled by the client and not by the guest as expected.
I didn't test on Linux, maybe is affected too.
Comment 1 Frediano Ziglio 2016-06-20 12:27:23 UTC
More recent patches changed GtkStack with GtkEventBox but the issue is still present.
Comment 2 Marc-Andre Lureau 2016-06-20 13:27:30 UTC
fix sent to ML:
https://lists.freedesktop.org/archives/spice-devel/2016-June/030326.html
Comment 3 Marc-Andre Lureau 2016-06-20 15:35:58 UTC
commit 0fafbe3d9e1fd74915992d276fdb36088c9739d0
Author: Marc-André Lureau <marcandre.lureau@redhat.com>
Date:   Mon Jun 20 15:18:22 2016 +0200

    widget: fix keyboard ungrab after click


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.